# Bittenfeld

./: DESIGN.rst  LiCENSE.rst  README.rst  bittenfeld.cabal
app/: Main.hs
src/: Bittenfeld.hs
tests/: TestMain.hs
